--- a/libraries/frameworks/io2012/layouts/default.html
+++ b/libraries/frameworks/io2012/layouts/default.html
@@ -26,6 +26,7 @@
     {{{ page.content }}}
     <slide class="backdrop"></slide>
   </slides>
+  {{> addthis }}
   {{> pagination }}
 
   <!--[if IE]>
